# autoresearch

./: .gitignore  README.md  analysis.ipynb  environment.yml  predict.py  prepare.py  program.md  pyproject.toml  train.py
