[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous garbage classification research — 4-category Chinese waste sorting with computer vision"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "Pillow>=10.2.0",
    "requests>=2.32.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0,<3.0.0",
    "torchvision>=0.16.0,<1.0.0",
]
