[project]
name = "autoresearch"
version = "0.2.0"
description = "Autonomous garbage object detection — detect and classify all garbage in images using YOLOv8 with 4-category Chinese waste sorting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "Pillow>=10.2.0",
    "requests>=2.28.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0,<3.0.0",
    "torchvision>=0.16.0,<1.0.0",
    "ultralytics>=8.1.0",
    "pyyaml>=6.0",
]
